"- Fixed hero image height and width on mobile. - Added safari browser styling to fix about section containers"

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -129,9 +129,10 @@
 
 .highlight-cards {
   display: grid;
-  grid-template-columns: 1fr;
+  grid-template-columns: minmax(0, 1fr);
   gap: 3rem;
   margin: 5rem 0;
+  -webkit-column-count: 1;
 }
 
 .highlight-card {
