--- a/src/components/HeroSection/HeroSection.css
+++ b/src/components/HeroSection/HeroSection.css
@@ -283,8 +283,8 @@
   }
 
   .glowing-hex {
-    width: 350px;
-    height: 350px;
+    width: 250px;
+    height: 250px;
   }
 }
 
